update : pugの出力方法変更、chunk追加、もろもろ調整

--- a/dev/src/css/modules/test.sass
+++ b/dev/src/css/modules/test.sass
@@ -8,12 +8,12 @@
   user-select: none
   &__title
     position: relative
-    color: $blue
+    color: #78D5D7
     font-size: 20px
     font-weight: 800
     padding: 20px
   &__image
     width: 100px
     height: 100px
-    background: url(#{$imgPath}/test.svg)
+    background: url('../materials/test.svg')
     cursor: pointer
