update : scss template

--- a/src/pug_templates/layouts/layout.pug
+++ b/src/pug_templates/layouts/layout.pug
@@ -51,7 +51,8 @@ html(lang='ja')
     //- script.
 
   body
-    block content
+    .l-page
+      block content
 
     if (env === 'production')
       //- script(src= PUBLIC_URL + '/js/vendor.js')
