--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,3 +14,16 @@
 //   Layout
 //
 // ==========================================================================
+@import './layout/page.scss';
+
+// ==========================================================================
+//
+//   object
+//
+// ==========================================================================
+
+// utility - - -
+@import './object/utility/display.scss';
+// component - - -
+
+// project - - -
